--- a/todo.org
+++ b/todo.org
@@ -4,7 +4,10 @@
   
   DeleteAllFiles /function/      Deletes all your files.
   Quit /function/                Get up and leave. 
-  
+
+* TODO Cycle alternative subtexts  
+  Allow to specify multiple alternate subtexts, and supply a command to cycle through them.
+
 * TODO Refine substring/flex matching
   - If the first character of a flex match is also the first character of the item, show that item before items with
     substring (not prefix) matching. The longer the match at the start, the higher the score.
